avance de cronometro y apertura personalizada

--- a/ProyectoIpc2/Views/MenuPrincipal/MenuPrincipal.cshtml
+++ b/ProyectoIpc2/Views/MenuPrincipal/MenuPrincipal.cshtml
@@ -16,8 +16,10 @@
         <img src="~/Content/Imgs/reversi.png" alt="" width="460" class="cabezera">
         <button class="option" onclick="vsPc()">Partida contra la PC</button>
         <button class="option" onclick="vsJugador()">Partida con otro jugador</button>
-        <button class="option">Torneo</button>
-        <button class="option">Reportes</button>
+        <button class="option" onclick="vsPcXtreme()">Partida Xtreme contra la PC</button>
+        <button class="option" onclick="vsJugadorXtreme()">Partida Xtreme contra otro jugador</button>
+        <button class="option">Campeonato</button>
+        <button class="option">Perfil</button>
         <button class="option" onclick="cerrarSesion()">Cerrar sesion</button>
     </div>
 </body>
