--- a/ProyectoIpc2/Views/Tablero/Tablero.cshtml
+++ b/ProyectoIpc2/Views/Tablero/Tablero.cshtml
@@ -68,7 +68,10 @@
     <div class="game_container">
         <div class="state-container">
             <div class="black-points"><p id="player1Points">Puntos: 2</p></div>
-            <div class="turn-state"><p id="turno">Turno: Negro</p></div>
+            <div class="turn-state">
+                <p id="turno">Turno: Negro</p>
+                <p id="cronometro"><span id="minutos">0</span>:<span id="segundos">0</span></p>
+            </div>
             <div class="white-points"><p id="player2Points">Puntos: 2</p></div>
         </div>
 
