--- a/ProyectoIpc2/Views/Tablero/Tablero.cshtml
+++ b/ProyectoIpc2/Views/Tablero/Tablero.cshtml
@@ -188,7 +188,7 @@
                     <button class="coin" id="22" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="4">
-                    <button class="coin  posible_inicial" id="32" onclick="casillaPresionada(this)"></button>
+                    <button class="coin" id="32" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="5">
                     <button class="coin" id="42" onclick="casillaPresionada(this)"></button>
@@ -218,13 +218,13 @@
                     <button class="coin" id="13" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="3">
-                    <button class="coin posible_inicial" id="23" onclick="casillaPresionada(this)"></button>
+                    <button class="coin" id="23" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="4">
-                    <button class="coin blanca_inicial" id="33" onclick="casillaPresionada(this)"></button>
+                    <button class="coin" id="33" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="5">
-                    <button class="coin negra_inicial" id="43" onclick="casillaPresionada(this)"></button>
+                    <button class="coin" id="43" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="6">
                     <button class="coin" id="53" onclick="casillaPresionada(this)"></button>
@@ -254,13 +254,13 @@
                     <button class="coin" id="24" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="4">
-                    <button class="coin negra_inicial" id="34" onclick="casillaPresionada(this)"></button>
+                    <button class="coin" id="34" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="5">
-                    <button class="coin blanca_inicial" id="44" onclick="casillaPresionada(this)"></button>
+                    <button class="coin" id="44" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="6">
-                    <button class="coin  posible_inicial" id="54" onclick="casillaPresionada(this)"></button>
+                    <button class="coin" id="54" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="7">
                     <button class="coin" id="64" onclick="casillaPresionada(this)"></button>
@@ -290,7 +290,7 @@
                     <button class="coin" id="35" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="5">
-                    <button class="coin posible_inicial" id="45" onclick="casillaPresionada(this)"></button>
+                    <button class="coin" id="45" onclick="casillaPresionada(this)"></button>
                 </div>
                 <div class="box" id="6">
                     <button class="coin" id="55" onclick="casillaPresionada(this)"></button>
