--- a/ProyectoIpc2/Views/Tablero/Tablero.cshtml
+++ b/ProyectoIpc2/Views/Tablero/Tablero.cshtml
@@ -75,336 +75,11 @@
             <div class="white-points"><p id="player2Points">Puntos: 2</p></div>
         </div>
 
-        <div class="box-container">
-            <div class="fila" id="cero">
-                <div class="box " id="cero">
-                </div>
-                <div class="box" id="1">
-                    <p class="marcador">A</p>
-                </div>
-                <div class="box" id="2">
-                    <p class="marcador">B</p>
-                </div>
-                <div class="box" id="3">
-                    <p class="marcador">C</p>
-                </div>
-                <div class="box" id="4">
-                    <p class="marcador">D</p>
-                </div>
-                <div class="box" id="5">
-                    <p class="marcador">E</p>
-                </div>
-                <div class="box" id="6">
-                    <p class="marcador">F</p>
-                </div>
-                <div class="box" id="7">
-                    <p class="marcador">G</p>
-                </div>
-                <div class="box" id="8">
-                    <p class="marcador">H</p>
-                </div>
-                <div class="box" id="nueve">
-
-                </div>
-            </div>
-
-            <div class="fila" id="1">
-                <div class="box" id="cero">
-                    <p class="marcador">1</p>
-                </div>
-                <div class="box" id="1">
-                    <button class="coin" id="00" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="2">
-                    <button class="coin" id="10" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="3">
-                    <button class="coin" id="20" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="4">
-                    <button class="coin" id="30" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="5">
-                    <button class="coin" id="40" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="6">
-                    <button class="coin" id="50" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="7">
-                    <button class="coin" id="60" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="8">
-                    <button class="coin" id="70" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="nueve">
-                    <p class="marcador">1</p>
-                </div>
-            </div>
-
-            <div class="fila" id="2">
-                <div class="box" id="cero">
-                    <p class="marcador">2</p>
-                </div>
-                <div class="box" id="1">
-                    <button class="coin" id="01" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="2">
-                    <button class="coin" id="11" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="3">
-                    <button class="coin" id="21" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="4">
-                    <button class="coin" id="31" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="5">
-                    <button class="coin" id="41" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="6">
-                    <button class="coin" id="51" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="7">
-                    <button class="coin" id="61" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="8">
-                    <button class="coin" id="71" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="nueve">
-                    <p class="marcador">2</p>
-                </div>
-            </div>
-
-            <div class="fila" id="3">
-                <div class="box" id="cero">
-                    <p class="marcador">3</p>
-                </div>
-                <div class="box" id="1">
-                    <button class="coin" id="02" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="2">
-                    <button class="coin" id="12" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="3">
-                    <button class="coin" id="22" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="4">
-                    <button class="coin" id="32" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="5">
-                    <button class="coin" id="42" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="6">
-                    <button class="coin" id="52" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="7">
-                    <button class="coin" id="62" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="8">
-                    <button class="coin" id="72" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="nueve">
-                    <p class="marcador">3</p>
-                </div>
-            </div>
-
-            <div class="fila" id="4">
-                <div class="box" id="cero">
-                    <p class="marcador">4</p>
-                </div>
-                <div class="box" id="1">
-                    <button class="coin" id="03" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="2">
-                    <button class="coin" id="13" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="3">
-                    <button class="coin" id="23" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="4">
-                    <button class="coin" id="33" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="5">
-                    <button class="coin" id="43" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="6">
-                    <button class="coin" id="53" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="7">
-                    <button class="coin" id="63" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="8">
-                    <button class="coin" id="73" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="nueve">
-                    <p class="marcador">4</p>
-                </div>
-            </div>
-
-            <div class="fila" id="3">
-                <div class="box" id="cero">
-                    <p class="marcador">5</p>
-                </div>
-                <div class="box" id="1">
-                    <button class="coin" id="04" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="2">
-                    <button class="coin" id="14" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="3">
-                    <button class="coin" id="24" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="4">
-                    <button class="coin" id="34" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="5">
-                    <button class="coin" id="44" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="6">
-                    <button class="coin" id="54" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="7">
-                    <button class="coin" id="64" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="8">
-                    <button class="coin" id="74" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="nueve">
-                    <p class="marcador">5</p>
-                </div>
-            </div>
-
-            <div class="fila" id="6">
-                <div class="box" id="cero">
-                    <p class="marcador">6</p>
-                </div>
-                <div class="box" id="1">
-                    <button class="coin" id="05" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="2">
-                    <button class="coin" id="15" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="3">
-                    <button class="coin" id="25" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="4">
-                    <button class="coin" id="35" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="5">
-                    <button class="coin" id="45" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="6">
-                    <button class="coin" id="55" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="7">
-                    <button class="coin" id="65" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="8">
-                    <button class="coin" id="75" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="nueve">
-                    <p class="marcador">6</p>
-                </div>
-            </div>
-
-            <div class="fila" id="7">
-                <div class="box" id="cero">
-                    <p class="marcador">7</p>
-                </div>
-                <div class="box" id="1">
-                    <button class="coin" id="06" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="2">
-                    <button class="coin" id="16" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="3">
-                    <button class="coin" id="26" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="4">
-                    <button class="coin" id="36" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="5">
-                    <button class="coin" id="46" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="6">
-                    <button class="coin" id="56" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="7">
-                    <button class="coin" id="66" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="8">
-                    <button class="coin" id="76" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="nueve">
-                    <p class="marcador">7</p>
-                </div>
-            </div>
-
-            <div class="fila" id="8">
-                <div class="box" id="cero">
-                    <p class="marcador">8</p>
-                </div>
-                <div class="box" id="1">
-                    <button class="coin" id="07" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="2">
-                    <button class="coin" id="17" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="3">
-                    <button class="coin" id="27" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="4">
-                    <button class="coin" id="37" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="5">
-                    <button class="coin" id="47" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="6">
-                    <button class="coin" id="57" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="7">
-                    <button class="coin" id="67" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="8">
-                    <button class="coin" id="77" onclick="casillaPresionada(this)"></button>
-                </div>
-                <div class="box" id="nueve">
-                    <p class="marcador">8</p>
-                </div>
-            </div>
-
-            <div class="fila" id="nueve">
-                <div class="box" id="cero">
-
-                </div>
-                <div class="box" id="1">
-                    <p class="marcador">A</p>
-                </div>
-                <div class="box" id="2">
-                    <p class="marcador">B</p>
-                </div>
-                <div class="box" id="3">
-                    <p class="marcador">C</p>
-                </div>
-                <div class="box" id="4">
-                    <p class="marcador">D</p>
-                </div>
-                <div class="box" id="5">
-                    <p class="marcador">E</p>
-                </div>
-                <div class="box" id="6">
-                    <p class="marcador">F</p>
-                </div>
-                <div class="box" id="7">
-                    <p class="marcador">G</p>
-                </div>
-                <div class="box" id="8">
-                    <p class="marcador">H</p>
-                </div>
-                <div class="box" id="nueve">
-                </div>
-            </div>
+        <div class="box-container" id="contendorTablero">
+            <!-- AQUI VA EL TABLERO -->
         </div>
     </div>
+
     <div class="players_info">
         <div class="player_info">
             <div class="black_Name">@ProyectoIpc2.Content.Csharp.GameLogic.jugador_negro</div>
