--- a/ProyectoIpc2/Views/MenuPrincipal/MenuPrincipal.cshtml
+++ b/ProyectoIpc2/Views/MenuPrincipal/MenuPrincipal.cshtml
@@ -19,7 +19,7 @@
         <button class="option" onclick="vsPcXtreme()">Partida Xtreme contra la PC</button>
         <button class="option" onclick="vsJugadorXtreme()">Partida Xtreme contra otro jugador</button>
         <button class="option">Campeonato</button>
-        <button class="option">Perfil</button>
+        <button class="option" onclick="irPerfil()">Perfil</button>
         <button class="option" onclick="cerrarSesion()">Cerrar sesion</button>
     </div>
 </body>
