--- a/ProyectoIpc2/Views/MenuXtreme/MenuXtreme.cshtml
+++ b/ProyectoIpc2/Views/MenuXtreme/MenuXtreme.cshtml
@@ -177,8 +177,10 @@
             <option>Gris</option>
         </select>
 
-        <button class="option" onclick="ajustarConfsXtreme()">continuar</button>
-
+        <div>
+            <button class="option" id="regresar" onclick="regresar()">Regresar</button>
+            <button class="option" onclick="ajustarConfsXtreme()">Continuar</button>
+        </div>
     </div>
     <script src="~/Content/JsFiles/MenuXtreme.js"></script>
 </body>
