--- a/ProyectoIpc2/Content/css/TableroEstilo.css
+++ b/ProyectoIpc2/Content/css/TableroEstilo.css
@@ -143,7 +143,6 @@
     margin: 10px;
     background-color: #303030;
     width: 250px;
-    height: 220px;
     border-radius: 8px;
     padding-top: 20px;
     box-sizing: border-box;
@@ -151,7 +150,7 @@
 
 
 .player_info {
-    background-color: whitesmoke;
+    background-color: #303030;
     width: 210px;
     margin: auto;
     margin-bottom: 20px;
@@ -179,10 +178,13 @@
 }
 
 .player_movs {
+    background-color: whitesmoke;
     box-sizing: border-box;
     padding-top: 8px;
     text-align: center;
     height: 40px;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
 }
 
 .info_option {
@@ -247,4 +249,22 @@
 
 #cronometro {
     margin-left: 36%;
+}
+
+.continuar {
+    background-color: #4ea33c;
+}
+
+.equipo {
+    background-color: #5c3d87;
+    color: whitesmoke;
+    width: 210px;
+    height: 40px;
+    border: none;
+    border-radius: 6px;
+    text-align: center;
+    margin-bottom: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
