--- a/ProyectoIpc2/Views/Perfil/Perfil.cshtml
+++ b/ProyectoIpc2/Views/Perfil/Perfil.cshtml
@@ -169,9 +169,9 @@
                 <th> &nbsp Catnidad de putnos ganados en torneos &nbsp &nbsp</th>
             </tr>
             <tr>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
+                <td>@ViewBag.nCampeonatos</td>
+                <td>@ViewBag.nCampeonatosGanados</td>
+                <td>@ViewBag.puntosGanados</td>
             </tr>
         </table>
 
